# jagged

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  allclasses-frame.html  allclasses-noframe.html  appveyor.yml  build.gradle  constant-values.html  deprecated-list.html  index-all.html  index.html  make.cmd  overview-frame.html  overview-summary.html  overview-tree.html  package-list  pom.xml  serialized-form.html  settings.gradle  settings.xml  setup
.github/workflows/: ci.yml
native/macosx/: libgit2.dylib  libjagged.dylib
org/libgit2/jagged/: Branch.html  Capabilities.html  Commit.Metadata.html  Commit.html  ConfigurationLevel.html  DetachedHead.html  GitObject.html  Mode.html  ObjectId.html  ObjectType.html  Options.CacheStatistics.html  Options.html  Reference.DirectReference.html  Reference.SymbolicReference.html  Reference.html  ReferenceCollection.ReferenceIterator.html  ReferenceCollection.html  Repository.html  Signature.html  Tree.TreeEntryIterator.html  Tree.html  TreeEntry.html  Version.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
org/libgit2/jagged/class-use/: Branch.html  Capabilities.html  Commit.Metadata.html  Commit.html  ConfigurationLevel.html  DetachedHead.html  GitObject.html  Mode.html  ObjectId.html  ObjectType.html  Options.CacheStatistics.html  Options.html  Reference.DirectReference.html  Reference.SymbolicReference.html  Reference.html  ReferenceCollection.ReferenceIterator.html  ReferenceCollection.html  Repository.html  Signature.html  Tree.TreeEntryIterator.html  Tree.html  TreeEntry.html  Version.html
org/libgit2/jagged/core/: Ensure.html  GitException.html  HashCode.html  Lazy.html  NativeHandle.html  NativeLoader.html  NativeMethods.html  Platform.Architecture.html  Platform.OperatingSystem.html  Platform.html  ReferenceType.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
org/libgit2/jagged/core/class-use/: Ensure.html  GitException.html  HashCode.html  Lazy.html  NativeHandle.html  NativeLoader.html  NativeMethods.html  Platform.Architecture.html  Platform.OperatingSystem.html  Platform.html  ReferenceType.html
scripts/: arch.mk  build.cmd  build.sh
settings/: java-cleanup.xml  java-formatting.xml
src/: code-format.xml
src/main/java/org/libgit2/jagged/: Blob.java  Branch.java  BuiltInFeatures.java  Capabilities.java  Commit.java  Common.java  ConfigurationLevel.java  DetachedHead.java  FilteringOptions.java  GitObject.java  GlobalSettings.java  Mode.java  ObjectId.java  ObjectType.java  Oid.java  Options.java  Reference.java  ReferenceCollection.java  Repository.java  Signature.java  Tree.java  TreeEntry.java  Version.java
src/main/java/org/libgit2/jagged/core/: BlobContentStream.java  BlobMetadata.java  Lazy.java  (+14 more)
src/main/native/: Makefile  make.cmd
src/main/native/libjagged/: CMakeLists.txt  Makefile  arch.mk  common.c  common.h  error.c  exception.h  global.c  jniutil.c  jniutil.h  misc.c  object.c  oid.h  reference.c  reference.h  repository.c  repository.h  status.c  util.h
src/test/java/org/libgit2/jagged/: BlobTest.java  BuiltInFeaturesTest.java  CapabilitiesTest.java  CommitTest.java  CommonTest.java  GitLocalCommandTest.java  GitTest.java  ObjectIdTest.java  OptionsTest.java  ReferenceTest.java  RepositoryTest.java  StatusTest.java  TreeTest.java  VersionTest.java
src/test/native/libjagged_test/: CMakeLists.txt  exception.c  test-repository.c  testutil.c  testutil.h
src/test/resources/testrepo/: one.txt  three.txt  two.txt
src/test/resources/testrepo/.gitted/: index
(+7 files in other folders)
